correct overflow for mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
+  overflow: auto;
 }
 
 
